# tease

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  SECURITY.md  action.yml  install.sh  llms.txt  package.json  sr.yaml  teasr.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  dogfood.yml  release.yml
crates/teasr-cli/: Cargo.toml  README.md
crates/teasr-cli/src/: main.rs  self_update.rs
crates/teasr-core/: Cargo.toml  README.md
crates/teasr-core/benches/: capture.rs
crates/teasr-core/src/: chrome_frame.html  chrome_frame.rs  config.rs  lib.rs  markdown_template.html  orchestrator.rs  setup.rs  types.rs  ui.rs
crates/teasr-core/src/browser/: chromium.rs  mod.rs
crates/teasr-core/src/capture/: chrome.rs  file.rs  mod.rs  screen.rs  terminal.rs  web.rs
crates/teasr-core/src/convert/: gif.rs
crates/teasr-core/src/pipeline/: mod.rs  sinks.rs
crates/teasr-core/src/render/: markdown.rs
crates/teasr-core/src/term_render/: ansi_parse.rs  mod.rs  rasterize.rs  splash.rs  svg.rs
crates/teasr-term-render/: Cargo.toml  LICENSE  README.md
crates/teasr-term-render/src/: ansi_parse.rs  lib.rs  rasterize.rs  splash.rs  svg.rs
examples/demo/: index.html
showcase/: file-demo.html  markdown-demo.md
skills/teasr/: SKILL.md
skills/teasr-dev/: SKILL.md
src/: cli.ts  convert.ts  ollama.ts  orchestrator.ts  server.ts
src/capture/: terminal.ts  web.ts
