[workspace]
resolver = "2"
members = [
    "crates/teasr-core",
    "crates/teasr-cli",
]

[workspace.package]
version = "0.18.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/urmzd/teasr"

[workspace.dependencies]
teasr-core = { path = "crates/teasr-core", version = "0.18.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
indicatif = "0.17"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }
