[package]
name = "teasr"
description = "CLI for teasr screenshot tool"
version = "0.19.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "teasr"
path = "src/main.rs"

[dependencies]
teasr-core.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
